--- a/class2_lab_cp/styles.css
+++ b/class2_lab_cp/styles.css
@@ -9,3 +9,9 @@ body {
 .footer-class {
   text-align: center;
 }
+
+.header-message {
+  font-size: 40px;
+  text-align: center;
+  color: deeppink;
+}
